Fixed footer alignment

--- a/public/files/css/bonito.less
+++ b/public/files/css/bonito.less
@@ -152,6 +152,9 @@
 #footer {
   margin-top: 20px;
   color: @light-text;
+  clear: both;
+  padding: 10px 20px;
+  text-align: right;
 }
 
 #footer #copyright-info,
@@ -166,12 +169,6 @@
 
 #footer #copyright-info a:hover {
   text-decoration: underline;
-}
-
-#footer {
-  clear: both;
-  padding: 0.3em 1em;
-  text-align: right;
 }
 
 #corpus-search-form {
